--- a/lib/app/views/index.html
+++ b/lib/app/views/index.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title></title>
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+
+  <title>MoviWiki</title>
 </head>
 <body>
 <div id='root'></div>
