--- a/lib/app/views/index.html
+++ b/lib/app/views/index.html
@@ -6,7 +6,8 @@
   <title>MoviWiki</title>
 </head>
 <body>
-<div id='root'></div>
+  <div id='root'></div>
 </body>
 <script src="/bundle.js"></script>
+<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
 </html>
