Add delete functionality

--- a/lib/app/views/reviews.erb
+++ b/lib/app/views/reviews.erb
@@ -13,11 +13,28 @@
     <h1 class="text-center"=>moviwiki</h1>
 
     <h4>Your favorites</h4>
-    <ul class="list-group">
+    <div class="list-group">
       <% favorite_movies.each do |movie| %>
-          <li class="list-group-item"><%= movie.title %></li>
+        <div class="row m-3">
+          <div class="col-lg">
+            <%= movie.title %>
+          </div>
+          <div class="col-sm">
+
+            <form method="post" action="/reviews/<%=movie.id %>">
+              <input type="hidden" name="_method" value="delete"/>
+              <button type="submit" class="btn btn-dark">Delete</button>
+
+            </form>
+
+
+
+            <a href="<%= @delete %>">
+            </a>
+          </div>
+        </div>
       <% end %>
-    </ul>
+    </div>
   </div>
 
 </body>
