--- a/lib/app/views/reviews.erb
+++ b/lib/app/views/reviews.erb
@@ -16,21 +16,21 @@
     <div class="list-group">
       <% favorite_movies.each do |movie| %>
         <div class="row m-3">
-          <div class="col-lg">
+          <div class="col-6">
             <%= movie.title %>
           </div>
-          <div class="col-sm">
-
+          <div class="col-3">
+            <%# TODO - pass along the associated review with the movie %>
+            <form method="post" action="/reviews/<%=movie.id %>">
+              <input type="hidden" name="_method" value="patch"/>
+              <button type="submit" class="btn btn-info">Update</button>
+            </form>
+          </div>
+          <div class="col-3">
             <form method="post" action="/reviews/<%=movie.id %>">
               <input type="hidden" name="_method" value="delete"/>
               <button type="submit" class="btn btn-dark">Delete</button>
-
             </form>
-
-
-
-            <a href="<%= @delete %>">
-            </a>
           </div>
         </div>
       <% end %>
