Add styling on placeholder and search icon

--- a/src/components/Feedback/index.scss
+++ b/src/components/Feedback/index.scss
@@ -9,3 +9,11 @@
   width: 100%;
   margin-bottom: 20px;
 }
+
+// change color of placeholder
+input::-webkit-input-placeholder {
+    color: #2125298c;
+}
+input:focus::-webkit-input-placeholder {
+    color: 999;
+}
