Add styling to change font and background color

--- a/lib/app/views/index.html
+++ b/lib/app/views/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+  <link href="https://fonts.googleapis.com/css?family=Lato|Vollkorn:900i&display=swap" rel="stylesheet">
 
   <title>MoviWiki</title>
 </head>
