--- a/src/components/Results/index.scss
+++ b/src/components/Results/index.scss
@@ -1,9 +1,10 @@
-.movie-result {
-  margin: 20px 100px 20px 100px;
-  padding: 20px;
+.result {
+  background-color: #f6f9ff;
+}
 
+.movie-result {
   .movie-poster {
-    width: 150px;
+    width: 50px;
   }
 }
 
