--- a/src/components/App/index.scss
+++ b/src/components/App/index.scss
@@ -1,9 +1,14 @@
-.app {
-  text-align: center;
-  margin: 20px;
+body {
+  background-color: #4772d3;
 }
 
-h1 {
-  font-family: Helvetica;
-  font-weight: 200;
+.app {
+  text-align: center;
+  font-family: 'Lato', sans-serif;
 }
+
+.heading {
+  font-family: 'Vollkorn', serif;
+  font-size: 6em;
+}
+
