Styling for favorites list and rounding corners of divs

--- a/lib/app/views/index.html
+++ b/lib/app/views/index.html
@@ -4,7 +4,7 @@
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
   <link href="https://fonts.googleapis.com/css?family=Lato|Vollkorn:900i&display=swap" rel="stylesheet">
 
-  <title>MoviWiki</title>
+  <title>moviwiki</title>
 </head>
 <body>
   <div id='root'></div>
