--- a/src/components/Results/index.scss
+++ b/src/components/Results/index.scss
@@ -1,10 +1,11 @@
 .result {
   background-color: #f6f9ff;
+  border-radius: 4px;
 }
 
 .movie-result {
   .movie-poster {
-    width: 50px;
+    width: 75%;
   }
 }
 
