Refactor stars to reuse star component

--- a/lib/app/views/reviews.erb
+++ b/lib/app/views/reviews.erb
@@ -12,7 +12,7 @@
 <body>
   <div class="container">
     <p class="favorites-list p-3"><a href="/">Home</a></p>
-    <p class="heading text-left"=>moviwiki</p>
+    <p class="heading text-left"><a href="/">moviwiki</a></p>
 
     <h5>Favorites</h5>
     <div class="list-group">
