--- a/src/components/Review/index.scss
+++ b/src/components/Review/index.scss
@@ -2,6 +2,11 @@
   display: grid;
   margin: 20px 200px 200px 200px;
   height: 100px;
+
+  .btn-info {
+    background-color: #030f29;
+    border-color: none;
+  }
 }
 
 .comment {
