--- a/src/components/SearchBar/index.scss
+++ b/src/components/SearchBar/index.scss
@@ -1,6 +1,11 @@
 .search-query {
   margin-right: 20px;
 
+  .btn-info {
+    border-color: none;
+    background-color: #030f29;
+    border-color: #030f29;
+  }
 }
 
 input {
