Add a little extra padding

--- a/lib/app/views/reviews.erb
+++ b/lib/app/views/reviews.erb
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-  <div class="container">
+  <div class="container pb-5">
     <p class="favorites-list p-3"><a href="/">Home</a></p>
     <p class="heading text-left"><a href="/">moviwiki</a></p>
     <div class="list-group">
